Nueva organizacion templates

--- a/core/templates/calificaciones/form_inicial.html
+++ b/core/templates/calificaciones/form_inicial.html
@@ -83,7 +83,7 @@
                     </div>
 
                     <div class="modal-footer">
-                        <a href="{% url 'calificacion_list' %}" class="btn-modal btn-secondary">✕ Cancelar</a>
+                        <a href="{% url 'main' %}" class="btn-modal btn-secondary">✕ Cancelar</a>
                         <button type="submit" class="btn-modal btn-primary">Continuar →</button>
                     </div>
                 </form>
